--- a/Agent/pom.xml
+++ b/Agent/pom.xml
@@ -57,5 +57,6 @@
             </plugin>
         </plugins>
         <finalName>agent</finalName>
+        <directory>${project.basedir}/../target/jars</directory>
     </build>
 </project>
