--- a/Hook/pom.xml
+++ b/Hook/pom.xml
@@ -42,6 +42,7 @@
             </plugin>
         </plugins>
         <finalName>hook</finalName>
+        <directory>${project.basedir}/../target/jars</directory>
     </build>
 
 </project>
